--- a/src/App.css
+++ b/src/App.css
@@ -6,9 +6,15 @@
 
   background-color: #242424;
   display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
 
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
+}
+
+body{
+  display: flex;
+  flex-direction: row;
 }
